<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@mipmap/logo"
            android:contentDescription="@string/app_logo"
            android:layout_marginBottom="20dp"/>

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="username"
            android:hint="@string/username"
            android:inputType="text"
            android:padding="12dp"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="phoneNumber"
            android:hint="@string/phone"
            android:padding="12dp"
            android:textSize="16sp"
            android:inputType="phone"/>

        <EditText
            android:id="@+id/etAddress"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="postalAddress"
            android:hint="@string/address"
            android:inputType="textPostalAddress"
            android:padding="12dp"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="emailAddress"
            android:hint="@string/email"
            android:padding="12dp"
            android:textSize="16sp"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="password"
            android:hint="@string/password"
            android:padding="12dp"
            android:textSize="16sp"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/registerBtn"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:layout_marginTop="20dp"
            android:backgroundTint="@android:color/holo_blue_dark"
            />

        <TextView
            android:id="@+id/loginTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_an_account"
            android:textSize="15sp"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/darker_gray"
            />
    </LinearLayout>
</ScrollView>
