<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical">

    <!-- Recipe Name Input -->
    <EditText
        android:id="@+id/etRecipeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="text"
        android:hint="@string/enter_recipe_name"
        android:minHeight="48dp" />

    <!-- Ingredients Input -->
    <EditText
        android:id="@+id/etIngredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_ingredients"
        android:minHeight="48dp" />

    <!-- Instructions Input -->
    <EditText
        android:id="@+id/etInstructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_instructions"
        android:minHeight="48dp" />

    <!-- Save Recipe Button -->
    <Button
        android:id="@+id/btnSaveRecipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_recipe"/>
</LinearLayout>
